--- a/config-dev.yml
+++ b/config-dev.yml
@@ -1,4 +1,4 @@
 #server:
 #  port: 6666
 config:
-    info: "master springcloud-config/config-dev.yml1"
+    info: "master springcloud-config/config-dev.yml========2"
